--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "PlatformSpecific.Analyzer": "2.0.2"
   },
   "frameworks": {
     "uap10.0": {}
