--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -99,7 +99,10 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Settings.cs" />
+    <Compile Include="Settings\Attributes.cs" />
+    <Compile Include="Settings\GroupedSettings.cs" />
+    <Compile Include="Settings\Setting.cs" />
+    <Compile Include="Settings\SettingInfo.cs" />
     <Compile Include="Views\Converters.cs" />
     <Compile Include="Views\GalleryPage.xaml.cs">
       <DependentUpon>GalleryPage.xaml</DependentUpon>
@@ -107,16 +110,19 @@
     <Compile Include="Views\ImagePage.xaml.cs">
       <DependentUpon>ImagePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\IMainPageController.cs" />
+    <Compile Include="Views\IRootController.cs" />
     <Compile Include="Views\LogOnDialog.xaml.cs">
       <DependentUpon>LogOnDialog.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
+    <Compile Include="Views\RootContorl.xaml.cs">
+      <DependentUpon>RootContorl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\SearchPage.xaml.cs">
       <DependentUpon>SearchPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\SplashControl.xaml.cs">
       <DependentUpon>SplashControl.xaml</DependentUpon>
@@ -129,20 +135,34 @@
     <None Include="ExViewer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Medium.scale-200.png" />
     <Content Include="Assets\Medium.scale-400.png" />
+    <Content Include="Assets\Small.scale-200.png" />
     <Content Include="Assets\Small.scale-400.png" />
     <Content Include="Assets\Splashes\botm0.scale-200.png" />
+    <Content Include="Assets\Splashes\botm0.scale-400.png" />
     <Content Include="Assets\Splashes\botm1.scale-200.png" />
+    <Content Include="Assets\Splashes\botm1.scale-400.png" />
     <Content Include="Assets\Splashes\botm2.scale-200.png" />
+    <Content Include="Assets\Splashes\botm2.scale-400.png" />
     <Content Include="Assets\Splashes\botm3.scale-200.png" />
+    <Content Include="Assets\Splashes\botm3.scale-400.png" />
     <Content Include="Assets\Splashes\botm4.scale-200.png" />
+    <Content Include="Assets\Splashes\botm4.scale-400.png" />
     <Content Include="Assets\Splashes\botm5.scale-200.png" />
+    <Content Include="Assets\Splashes\botm5.scale-400.png" />
     <Content Include="Assets\Splashes\botm6.scale-200.png" />
+    <Content Include="Assets\Splashes\botm6.scale-400.png" />
     <Content Include="Assets\Splashes\botm7.scale-200.png" />
+    <Content Include="Assets\Splashes\botm7.scale-400.png" />
+    <Content Include="Assets\SplashScreen.scale-400.png" />
+    <Content Include="Assets\Store.scale-200.png" />
     <Content Include="Assets\Store.scale-400.png" />
+    <Content Include="Assets\Taskbar.scale-200.png" />
     <Content Include="Assets\Taskbar.scale-400.png" />
     <Content Include="Assets\TaskBar.targetsize-256.png" />
     <Content Include="Assets\TaskBar.targetsize-256_altform-unplated.png" />
+    <Content Include="Assets\Wide.scale-200.png" />
     <Content Include="Assets\Wide.scale-400.png" />
     <Content Include="CategoryImage\ArtistCG.png" />
     <Content Include="CategoryImage\ArtistCG_d.png" />
@@ -184,11 +204,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\MainPage.xaml">
+    <Page Include="Views\RootContorl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\SearchPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
