--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Category.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="ConnectionHelper.cs" />
+    <Compile Include="DictionaryExtention.cs" />
     <Compile Include="DispatcherHelper.cs" />
     <Compile Include="GalleryCache.cs" />
     <Compile Include="GalleryImage.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="ReCaptcha.cs" />
     <Compile Include="SearchResult.cs" />
     <Compile Include="Gallery.cs" />
+    <Compile Include="Tag.cs" />
     <Content Include="Properties\ExClient.rd.xml" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
