--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "HtmlAgilityPack": "1.4.9",
     "Microsoft.EntityFrameworkCore.SQLite": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Newtonsoft.Json": "8.0.3"
   },
