--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -4,6 +4,7 @@
     "Microsoft.EntityFrameworkCore.SQLite": "1.0.0-rc2-final",
     "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview1-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "MvvmLightLibs": "5.3.0",
     "Newtonsoft.Json": "8.0.3"
   },
   "frameworks": {
