--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -116,8 +116,10 @@
     <Compile Include="Settings\SettingCollectionBase.cs" />
     <Compile Include="Settings\SettingsHelper.cs" />
     <Compile Include="Themes\ThemeExtention.cs" />
-    <Compile Include="ViewModels\Cache.cs" />
+    <Compile Include="ViewModels\CacheStorage{TKey,TCache}.cs" />
     <Compile Include="ViewModels\CacheVM.cs" />
+    <Compile Include="ViewModels\GalleryVM.cs" />
+    <Compile Include="ViewModels\SearchVM.cs" />
     <Compile Include="Views\CachePage.xaml.cs">
       <DependentUpon>CachePage.xaml</DependentUpon>
     </Compile>
