--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "ImageLib.UWP": "5.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "MvvmLight": "5.3.0",
     "PlatformSpecific.Analyzer": "2.0.2"
