visualization of tags in gallery page
Former-commit-id: ea39ad036dcbebacb9bd60dcd9c63cfdda37900e [formerly e99aa71c67d4ea644eaa688f1bd9c8bcdc1932db]
Former-commit-id: 17e0486cf964068d83c8a8028ea9988b53bf1237

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Controls\SplitViewButton.cs" />
     <Compile Include="Controls\SplitViewTab.cs" />
+    <Compile Include="Controls\WrapStackPanel.cs" />
     <Compile Include="Settings\Attributes.cs" />
     <Compile Include="Settings\GroupedSettings.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
