UI for torrents and comments
Former-commit-id: 3af4386b98ff5b7277e34797c4a240388ed88e95 [formerly e79218d253986d8a09b735f5b7501015497048cf]
Former-commit-id: 92e73d5849686c8d851909e39e3dd834aec73448

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -103,6 +103,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\BBCodeTextBlock.xaml.cs">
+      <DependentUpon>BBCodeTextBlock.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\CategorySelector.xaml.cs">
       <DependentUpon>CategorySelector.xaml</DependentUpon>
     </Compile>
@@ -187,6 +190,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\BBCodeTextBlock.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\CategorySelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
