Account manage & bug fix for comments
Former-commit-id: e91d9d628dc66aafbe3e035841e773c8f3e07086 [formerly aef56a9ac3a3d84ada9c13908a1534d00621d5d3]
Former-commit-id: 12b63807fba422be9487bf2f2b6bdb7f68f25c64

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -109,7 +109,9 @@
   <ItemGroup>
     <Compile Include="AdvancedSearchOptions.cs" />
     <Compile Include="CachedGallery.cs" />
+    <Compile Include="Client-Forum.cs" />
     <Compile Include="Comment.cs" />
+    <Compile Include="Helpers\HtmlHelper.cs" />
     <Compile Include="Models\CachedGalleryModel.cs" />
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Category.cs" />
