--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -1,10 +1,19 @@
 ﻿{
   "dependencies": {
-    "HtmlAgilityPack": "1.4.9",
-    "Microsoft.EntityFrameworkCore.SQLite": "1.0.0-rc2-final",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+
+    "runtime.native.System.IO.Compression": "4.1.0",
+    "runtime.win7.System.Private.Uri": {
+      "version": "4.0.1",
+      "exclude": "runtime"
+    },
+    "System.Private.Uri": "4.0.0",
+
+
+    "HtmlAgilityPack": "1.4.9.4",
+    "Microsoft.EntityFrameworkCore.Sqlite": "1.0.0",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.0",
     "MvvmLightLibs": "5.3.0",
-    "Newtonsoft.Json": "8.0.3"
+    "Newtonsoft.Json": "9.0.1"
   },
   "frameworks": {
     "uap10.0": {}
@@ -12,9 +21,9 @@
   "runtimes": {
     "win10-arm": {},
     "win10-arm-aot": {},
-    "win10-x86": {},
-    "win10-x86-aot": {},
     "win10-x64": {},
-    "win10-x64-aot": {}
+    "win10-x64-aot": {},
+    "win10-x86": {},
+    "win10-x86-aot": {}
   }
 }
