ScrollBar, keyboard tip, New DB design, Bug fix
Former-commit-id: 0a693bbd0c0aee8f02d95a08259a098d692ddc56 [formerly f3d759ef6b6dec163c4a4b01e6600b5958fd42e1]
Former-commit-id: 64807021816ce4f5fa328e138a96b790457aee0e

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -98,7 +98,9 @@
     <None Include="ExViewer_StoreKey.pfx" />
     <None Include="project.json" />
     <PRIResource Include="Strings\zh-cn\Resources.resw" />
-    <PRIResource Include="Strings\en\Resources.resw" />
+    <PRIResource Include="Strings\en\Resources.resw">
+      <SubType>Designer</SubType>
+    </PRIResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManager.cs" />
@@ -130,6 +132,7 @@
     <Compile Include="Settings\SettingInfo.cs" />
     <Compile Include="Settings\SettingCollectionBase.cs" />
     <Compile Include="Settings\SettingsHelper.cs" />
+    <Compile Include="Settings\StatusCollection.cs" />
     <Compile Include="Strings\Strings.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
